# smart-cart

./: .eslintrc.json  .gitignore  README.md  docker-compose.yml  externals.js  package.json  tsconfig.json  webpack.config.js
backend/: .eslintrc.json  .gitignore  .npmignore  .prettierrc.js  package.json  tsconfig.json  webpack.config.js
backend/configs/: plugins.js  tsconfig.json
backend/src/bootstrap/: application.ts  repos-factory.ts
backend/src/business-logic/: types.ts
backend/src/processes/: external.ts  index.ts  types.ts
backend/src/repositories/: index.ts  types.ts
backend/src/server/: external.ts  index.ts  main-thread.ts  server-setup.ts  types.ts
backend/src/shared/: constants.ts  (+4 more)
bot/: externals.js  package.json  tsconfig.json  webpack.config.js
bot/configs/: .eslintrc.json  babel.config.js  webpack.js
configs/: .prettierrc.json  index.js  webpack.js
data/: train.jsonl  train_food_1.jsonl  train_food_2.jsonl  train_food_9.jsonl
data/converted/: common.jsonl
mistral-api/: .dockerignore  .gitignore  Dockerfile  inference.py  log.txt  pyproject.toml
mistral-lora/: .gitignore  Dockerfile  pyproject.toml
mistral-lora/.devcontainer/: devcontainer.json
mistral-lora/api/: package.json
mistral-lora/api/src/: index.ts
mistral-lora/data/: train_food_4.jsonl  train_food_5.jsonl  train_food_7.jsonl
mistral-lora/data-prev/: delimiters.jsonl  eggs.jsonl
mistral-lora/data/converted/: common.jsonl  delimiters.jsonl  test.jsonl
mistral-lora/mistral_lora/: archive_model.py  check_train_data.py  check_versions.py  commands.txt  export_model.py  inference.py  prepare_model.sh  reset.sh  test_env.py  train_lora.py  validate_data.py
mistral-lora/mistral_lora/converters/: convert_data.py  convert_format.py  convert_to_random_delimiters.py
mistral-lora/mistral_lora/data/: clear_food.jsonl  deepseek.jsonl  eggs.jsonl  eggs_normal.jsonl  promt.txt  train_eggs_new.jsonl  train_eggs_new_2.jsonl  train_eggs_old.jsonl  train_food_10.jsonl  train_food_11.jsonl  train_food_12.jsonl  train_food_13.jsonl  train_food_3.jsonl  train_food_6.jsonl  train_food_8.jsonl  train_food_count_1000.jsonl  training_data.jsonl
mistral-lora/mistral_lora/data/converted/: eggs.jsonl
src/bootstrap/: application.ts  external-repos-factory.ts  external.ts  index.ts  marketplace-repos-factory.ts  repos-factory.ts  some-func.ts  storages-factory.ts
src/bussines-logic/: external.ts  index.ts  types.ts
src/foundation/: index.ts
src/processes/: common.ts  external.ts  index.ts  types.ts
src/repositories/: external.ts  index.ts  types.ts  user-repo.ts
src/server/: external.ts  index.ts  init-processes.ts  main-thread.ts  server-setup.ts  types.ts
src/shared/: god-like-function-for-russian-language.ts  index.ts  messages-based-communicator.ts  object-utils.ts  other-utils.ts  path-generator.ts
(+449 files in other folders)
