[tool.poetry]
name = "mistral-lora"
version = "0.1.0"
description = "Mistral 7B LoRA fine-tuning implementation"
authors = [
    "pbelinovich"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.37.2"
datasets = "2.16.1"
peft = "0.7.1"
accelerate = "0.26.1"
torch = "2.7.1+cu128"
scipy = "1.12.0"
tqdm = "4.66.1"
psutil = "5.9.8"
GPUtil = "1.4.0"
tensorboard = "2.15.1"
bitsandbytes = {version = "0.41.1", platform = "linux"}
typing-extensions = "4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
black = "24.1.1"
isort = "5.13.2"
flake8 = "7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"