[tool.poetry]
name = "mistral-lora"
version = "0.1.0"
description = "Mistral 7B LoRA fine-tuning implementation"
authors = [
    "pbelinovich"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "2.16.1"
pytest = "7.4.4"
black = "24.1.1"
isort = "5.13.2"
flake8 = "7.0.0"
bitsandbytes = "0.46.0"
tokenizers = "0.21.1"
transformers = "4.52.4"
peft = "0.15.2"
accelerate = "1.7.0"
scipy = "1.12.0"
tqdm = "4.66.1"
psutil = "5.9.8"
GPUtil = "1.4.0"
tensorboard = "2.15.1"
typing-extensions = "4.12.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"